[gd_scene load_steps=4 format=3 uid="uid://br151y17x7s4h"]

[ext_resource type="Script" uid="uid://cdtoe15453ltp" path="res://src/battle/ui/player_card/player_card.gd" id="1_0jxgf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivq2v"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jxgf"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[node name="PlayerCard" type="Control"]
custom_minimum_size = Vector2(282, 130)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_right = 282.0
grow_vertical = 0
script = ExtResource("1_0jxgf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_right = 282.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "${NAME}"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HpProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_ivq2v")
max_value = 1.0
value = 0.52
show_percentage = false

[node name="HpLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "999/999"

[node name="MpProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_0jxgf")
max_value = 1.0
value = 0.52
show_percentage = false

[node name="MpLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(62, 0)
layout_mode = 2
text = "999/999"

[node name="AilmentsLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 49)
layout_mode = 2
